# github-review-comments-counter

./: .env.example  README.md  main.py  pyproject.toml
github_review_counter/: client.py
utils/: env.py
